--- a/src/css/style.css
+++ b/src/css/style.css
@@ -53,24 +53,31 @@
         width: 100%;
     }
 
+    & .tech-stack-title {
+        font-style: italic;
+        font-size: 2rem;
+        font-weight: 300;
+        text-align: left;
+        width: 100%;
+    }
+
     & .tech-stack {
+        align-items: flex-start;
         display: flex;
         flex-direction: column;
         gap: 3rem;
+        overflow-x: auto;
         width: 100%;
 
-        & .tech-stack-title {
-            font-size: 2rem;
-            font-weight: 300;
-        }
-
         & .tech-logos {
+            align-items: center;
             display: flex;
             flex-direction: row;
             justify-content: center;
-            align-items: center;
             gap: 2rem;
+            padding: 1rem;
             overflow-x: scroll;
+            width: max-content;
 
             & .logo {
                 align-items: center;
@@ -80,7 +87,6 @@
                 width: 4rem;
 
                 & img {
-                    display: inline;
                     filter: grayscale();
                     height: 3rem;
                     transition: all 200ms;
@@ -132,7 +138,7 @@
 
     & .highlight {
         font-weight: 300;
-        font-size: 2.5rem;
+        font-size: 2rem;
         max-width: 50%;
     }
 
