--- a/src/css/menu.css
+++ b/src/css/menu.css
@@ -5,7 +5,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    padding-bottom: 1rem;
+    padding: 1rem;
     width: 30rem;
 
     & img {
