--- a/src/css/experience.css
+++ b/src/css/experience.css
@@ -37,7 +37,7 @@
                 display: flex;
                 flex-direction: column;
                 gap: 1rem;
-                max-width: 40rem;
+                min-width: 50%;
                 min-height: 70vh;
                 padding: 2rem;
 
@@ -87,12 +87,11 @@
                 & .description-container {
                     display: flex;
                     flex-direction: column;
-                    min-height: 10rem;
+                    min-height: 12rem;
                     gap: 1rem;
                 }
             }
         }
-
 
         & .controls {
             border-radius: 4rem;
@@ -114,6 +113,12 @@
             background-color: var(--text-color);
             color: var(--bg-color);
         }
+    }
+
+    & .page-counter {
+        display: flex;
+        justify-content: flex-end;
+        width: 100%;
     }
 }
 
