move tech logos, start projects section

--- a/src/css/experience.css
+++ b/src/css/experience.css
@@ -71,6 +71,9 @@
                     }
 
                     & .logo:hover {
+                        & p {
+                            font-weight: 600;
+                        }
 
                         & img {
                             filter: unset;
