--- a/src/css/projects.css
+++ b/src/css/projects.css
@@ -11,6 +11,7 @@
 #projects {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     padding-block: 5rem;
 
     & .subtitle {
@@ -67,6 +68,7 @@
             gap: 2rem;
             overflow: hidden;
             text-align: left;
+            transition: opacity 200ms;
 
             & .images {
                 align-items: center;
@@ -87,11 +89,7 @@
                 & .scroll-sign-container {
                     min-height: 3rem;
 
-                    & .hidden {
-                        display: none;
-                    }
-
-                    & p {
+                    & .scroll-sign {
                         animation: lighteffect 1s linear infinite alternate;
                         display: flex;
                         flex-direction: row;
@@ -104,6 +102,10 @@
                             display: flex;
                             font-weight: 500;
                         }
+                    }
+
+                    & .hidden {
+                        display: none;
                     }
                 }
             }
