--- a/src/css/global.css
+++ b/src/css/global.css
@@ -5,15 +5,6 @@
     padding-block-start: 2rem;
 }
 
-.header {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    position: fixed;
-    width: 100%;
-    z-index: 10;
-}
-
 .section-container {
     align-items: center;
     display: flex;
@@ -22,4 +13,15 @@
     height: 100vh;
     gap: 1.5rem;
     text-align: center;
+}
+
+.blur {
+    filter: blur(0.15rem);
+}
+
+@media only screen and (max-width: 768px) {
+    #app {
+        padding: 0;
+        overflow: hidden;
+    }
 }
