--- a/src/css/home.css
+++ b/src/css/home.css
@@ -1,29 +1,51 @@
-.title {
-    font-style: italic;
-    letter-spacing: 3rem;
-    font-size: 5rem;
-}
+#home {
+    .title {
+        font-style: italic;
+        letter-spacing: 3rem;
+        font-size: 5rem;
+    }
 
-.subtitle {
-    font-style: italic;
-    font-size: 1.5rem;
-    font-weight: 300;
-    letter-spacing: 1rem;
-}
+    .subtitle {
+        font-style: italic;
+        font-size: 1.5rem;
+        font-weight: 300;
+        letter-spacing: 1rem;
+    }
 
-.cursor {
-    position: fixed;
-    width: 6rem;
-    height: 6rem;
-    background: white;
-    border-radius: 50%;
-    pointer-events: none;
-    mix-blend-mode: difference;
-    transform: translate(-50%, -50%);
-    transition: opacity 0.3s ease-out;
-}
+    .cursor {
+        position: fixed;
+        width: 6rem;
+        height: 6rem;
+        background: white;
+        border-radius: 50%;
+        pointer-events: none;
+        mix-blend-mode: difference;
+        transform: translate(-50%, -50%);
+        transition: opacity 0.3s ease-out;
+    }
 
-.transparent {
-    cursor: default;
-    opacity: 0;
+    .transparent {
+        cursor: default;
+        opacity: 0;
+    }
+
+    @media only screen and (max-width: 1200px) {
+        & .title {
+            letter-spacing: 1rem;
+            font-size: 3rem;
+        }
+    }
+
+    @media only screen and (max-width: 768px) {
+        & .title {
+            letter-spacing: 1rem;
+            font-size: 2rem;
+        }
+
+        & .subtitle {
+            font-size: 1rem;
+            font-weight: 500;
+            letter-spacing: .5rem;
+        }
+    }
 }
