--- a/src/css/about.css
+++ b/src/css/about.css
@@ -4,10 +4,22 @@
     justify-content: space-between;
     padding-block: 4rem;
 
-    & .subtitle {
-        font-size: 4rem;
+    & .about-content {
+        align-items: center;
+        display: flex;
+        flex-direction: row;
         text-align: left;
-        width: 100%;
+
+        & .highlight {
+            font-weight: 300;
+            font-size: 2rem;
+            max-width: 50%;
+        }
+
+        & li {
+            font-size: 1.2rem;
+            margin-bottom: 1rem;
+        }
     }
 
     & .tech-stack-title {
@@ -90,22 +102,11 @@
             }
         }
     }
-}
 
-.about-content {
-    align-items: center;
-    display: flex;
-    flex-direction: row;
-    text-align: left;
+    @media only screen and (max-width: 1200px) {
 
-    & .highlight {
-        font-weight: 300;
-        font-size: 2rem;
-        max-width: 50%;
     }
 
-    & li {
-        font-size: 1.2rem;
-        margin-bottom: 1rem;
+    @media only screen and (max-width: 768px) {
     }
 }
