--- a/src/css/about.css
+++ b/src/css/about.css
@@ -103,10 +103,24 @@
         }
     }
 
-    @media only screen and (max-width: 1200px) {
-
-    }
-
     @media only screen and (max-width: 768px) {
+        & .about-content {
+            flex-direction: column;
+            gap:1rem;
+
+            & .highlight {
+                font-size: 2rem;
+                max-width: 100%;
+            }
+
+            & li:last-child {
+                margin-bottom: 0rem;
+            }
+        }
+
+        & .more-links {
+            display: none;
+        }
+
     }
 }
