--- a/src/css/global.css
+++ b/src/css/global.css
@@ -34,7 +34,7 @@
 
 @media only screen and (max-width: 768px) {
     #app {
-        padding: 0;
+        padding-inline: .5rem;
         overflow: hidden;
     }
 }
