add media queries to experience styles

--- a/src/css/experience.css
+++ b/src/css/experience.css
@@ -138,4 +138,18 @@
             display: none;
         }
     }
+
+    @media only screen and (max-width: 992px) {
+        & .jobs {
+            & .jobs-container {
+                & .job {
+                    padding: 1rem;
+                }
+            }
+
+            & .controls {
+                width: 3.7rem;
+            }
+        }
+    }
 }
