--- a/src/css/projects.css
+++ b/src/css/projects.css
@@ -20,36 +20,41 @@
         flex-direction: column;
         gap: 2rem;
 
-        & ul {
-            display: flex;
-            flex-direction: row;
-            gap: 2rem;
+        & .projects-menu {
+            padding: 1rem;
 
-            & li {
-                align-items: start;
+            & ul {
                 display: flex;
-                flex-direction: column;
-                justify-content: flex-end;
-                font-weight: 500;
-                list-style: none;
-                text-align: left;
-                width: 7rem;
+                flex-direction: row;
+                gap: 2rem;
+                padding: 0;
 
-                & hr {
-                    transition: width 200ms;
-                    width: 2rem;
+                & li {
+                    align-items: start;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: flex-end;
+                    font-weight: 500;
+                    list-style: none;
+                    text-align: left;
+                    width: 7rem;
+
+                    & hr {
+                        transition: width 200ms;
+                        width: 2rem;
+                    }
                 }
-            }
 
-            & li:hover {
-                & hr {
-                    width: 100%;
+                & li:hover {
+                    & hr {
+                        width: 100%;
+                    }
                 }
-            }
 
-            & .selected {
-                & hr {
-                    width: 100%;
+                & .selected {
+                    & hr {
+                        width: 100%;
+                    }
                 }
             }
         }
@@ -113,6 +118,23 @@
 
                 & a {
                     width: fit-content;
+                }
+            }
+        }
+    }
+
+    @media only screen and (max-width: 992px) {
+        & .projects-content {
+            gap: 0;
+            & .projects-menu {
+                padding: 0;
+            }
+            & .project-container {
+                flex-direction: column;
+                gap: 1rem;
+                & .details {
+                    padding: 1rem 0 0 0;
+                    gap: .5rem;
                 }
             }
         }
