make contact responsive, minor changes

--- a/src/css/about.css
+++ b/src/css/about.css
@@ -107,6 +107,7 @@
         & .about-content {
             flex-direction: column;
             gap: 1rem;
+            padding: 1rem;
 
             & .highlight {
                 font-size: 2rem;
