--- a/src/css/about.css
+++ b/src/css/about.css
@@ -102,15 +102,19 @@
             }
         }
     }
+}
 
-    @media only screen and (max-width: 768px) {
+
+@media only screen and (max-width: 768px) {
+    #about {
+        height: 100%;
         & .about-content {
             flex-direction: column;
             gap: 1rem;
             padding: 1rem;
 
             & .highlight {
-                font-size: 2rem;
+                font-size: 1.5rem;
                 max-width: 100%;
             }
 
@@ -121,6 +125,10 @@
 
         & .more-links {
             display: none;
+        }
+
+        & .tech-stack-title {
+            font-size: 1.5rem;
         }
     }
 }
