--- a/src/css/modeSwitch.css
+++ b/src/css/modeSwitch.css
@@ -2,6 +2,7 @@
     border-radius: 4rem;
     height: 1rem;
     padding: 0;
+    margin: 1rem;
     outline: none;
     transition: all 300ms;
     will-change: filter;
