--- a/src/css/projects.css
+++ b/src/css/projects.css
@@ -157,3 +157,15 @@
         }
     }
 }
+
+@media only screen and (max-width: 768px) {
+    #projects {
+        & .projects-content {
+            & .project-container {
+                & .images {
+                    display: none;
+                }
+            }
+        }
+    }
+}
