--- a/src/css/experience.css
+++ b/src/css/experience.css
@@ -5,87 +5,93 @@
     padding-block: 5rem;
     height: 100vh;
 
-    & .jobs {
+    & .experience-content {
         display: flex;
         flex-direction: row;
-        justify-content: center;
-        align-items: center;
+        justify-content: space-between;
+        height: 100%;
         width: 100%;
 
-        & .jobs-container {
+        & .jobs {
             display: flex;
-            flex-direction: row;
+            flex-direction: column;
             justify-content: center;
-            gap: 1rem;
-            text-align: left;
-            transition: opacity 200ms;
+            align-items: center;
             width: 100%;
 
-            & .vertical-line {
-                background: var(--text-color);
-                height: auto;
-                width: 0.2rem;
-            }
-
-            & .job {
+            & .jobs-container {
                 display: flex;
-                flex-direction: column;
+                flex-direction: row;
+                justify-content: center;
                 gap: 1rem;
-                min-width: 50%;
-                min-height: 70vh;
-                padding: 2rem;
+                text-align: left;
+                transition: opacity 200ms;
+                width: 100%;
 
-                & .logos-container {
+                & .vertical-line {
+                    background: var(--text-color);
+                    height: auto;
+                    width: 0.2rem;
+                }
+
+                & .job {
                     display: flex;
                     flex-direction: column;
-                    height: 8rem;
                     gap: 1rem;
-                    flex-wrap: wrap;
-                    justify-content: center;
-                    align-items: center;
+                    min-width: 50%;
+                    padding: 2rem;
 
-                    & .logo {
-                        align-items: center;
+                    & .logos-container {
                         display: flex;
                         flex-direction: column;
+                        height: 8rem;
+                        gap: 1rem;
+                        flex-wrap: wrap;
                         justify-content: center;
-                        height: 3rem;
-                        width: 3rem;
+                        align-items: center;
 
-                        & img {
-                            filter: grayscale();
-                            height: 2rem;
-                            transition: all 200ms;
-                            width: 2rem;
+                        & .logo {
+                            align-items: center;
+                            display: flex;
+                            flex-direction: column;
+                            justify-content: center;
+                            height: 3rem;
+                            width: 3rem;
+
+                            & img {
+                                filter: grayscale();
+                                height: 2rem;
+                                transition: all 200ms;
+                                width: 2rem;
+                            }
+
+                            & p {
+                                font-weight: 500;
+                            }
                         }
 
-                        & p {
-                            font-weight: 500;
+                        & .logo:hover {
+                            & p {
+                                font-weight: 600;
+                            }
+
+                            & img {
+                                filter: unset;
+                                height: 2.2rem;
+                                width: 2.2rem;
+                            }
                         }
                     }
 
-                    & .logo:hover {
-                        & p {
-                            font-weight: 600;
-                        }
-
-                        & img {
-                            filter: unset;
-                            height: 2.2rem;
-                            width: 2.2rem;
-                        }
+                    & a {
+                        text-decoration: underline;
                     }
-                }
 
-                & a {
-                    text-decoration: underline;
-                }
-
-                & .description-container {
-                    display: flex;
-                    flex-direction: column;
-                    min-height: 12rem;
-                    gap: 1rem;
+                    & .description-container {
+                        display: flex;
+                        flex-direction: column;
+                        gap: 1rem;
+                    }
                 }
             }
         }
@@ -131,41 +137,27 @@
 
 @media only screen and (max-width: 768px) {
     #experience {
-        height: 100%;
+        gap: 0;
 
-        & .about-content {
-            flex-direction: column;
-            gap: 1rem;
-
-            & .highlight {
-                font-size: 2rem;
-                max-width: 100%;
-            }
-
-            & li:last-child {
-                margin-bottom: 0rem;
-            }
+        & .subtitle {
+            order: 1;
         }
-
-        & .more-links {
-            display: none;
-        }
-    }
-}
-
-@media only screen and (max-width: 992px) {
-    #experience {
-        & .jobs {
-            & .jobs-container {
-                & .job {
-                    padding: 1rem;
-                    min-height: auto;
+        & .experience-content {
+            order: 3;
+            & .jobs {
+                flex-direction: column-reverse;
+                & .jobs-container {
+                    & .job {
+                        padding: 1rem;
+                        min-height: 80vh;
+                    }
                 }
             }
+        }
 
-            & .controls {
-                width: 3.7rem;
-            }
+        & .page-counter {
+            justify-content: flex-end;
+            order: 2;
         }
     }
 }
