--- a/src/css/projects.css
+++ b/src/css/projects.css
@@ -21,6 +21,7 @@
     flex-direction: column;
     justify-content: start;
     padding-block: 5rem;
+    height: 100vh;
 
     & .projects-content {
         align-items: center;
@@ -82,6 +83,7 @@
                 align-items: center;
                 display: flex;
                 flex-direction: column;
+                height: 100%;
                 max-width: 50rem;
 
                 & .images-container {
@@ -138,6 +140,8 @@
         height: 100%;
         & .projects-content {
             gap: 1rem;
+            height: 100%;
+            justify-content: space-between;
             width: 100%;
             & .projects-menu {
                 padding: 0;
@@ -160,7 +164,9 @@
 
 @media only screen and (max-width: 768px) {
     #projects {
+        height: 100vh;
         & .projects-content {
+            flex-direction: column-reverse;
             & .project-container {
                 & .images {
                     display: none;
