--- a/src/css/menu.css
+++ b/src/css/menu.css
@@ -33,7 +33,9 @@
 @media only screen and (max-width: 768px) {
     .menu {
         gap: .5rem;
+        justify-content: space-evenly;
         padding: 0;
+        width: 100%;
 
         & .logo {
             display: none;
