--- a/src/css/projects.css
+++ b/src/css/projects.css
@@ -84,7 +84,6 @@
                 display: flex;
                 flex-direction: column;
                 height: 100%;
-                max-width: 50rem;
 
                 & .images-container {
                     border: 0.2rem solid var(--text-color);
@@ -94,7 +93,7 @@
                     gap: 1rem;
                     overflow-x: scroll;
                     scroll-behavior: smooth;
-                    width: 50rem;
+                    width: 45rem;
                 }
 
                 & .scroll-sign-container {
@@ -170,6 +169,20 @@
             & .project-container {
                 & .images {
                     display: none;
+                }
+            }
+        }
+    }
+}
+
+@media only screen and (min-width: 1900px) {
+    #projects {
+        & .projects-content {
+            & .project-container {
+                & .images {
+                    & .images-container {
+                        width: 60rem;
+                    }
                 }
             }
         }
