--- a/src/css/about.css
+++ b/src/css/about.css
@@ -108,10 +108,18 @@
 @media only screen and (max-width: 768px) {
     #about {
         height: 100%;
+        padding-block-end: 0;
+
         & .about-content {
             flex-direction: column;
             gap: 1rem;
             padding: 1rem;
+
+            & ul {
+                & li {
+                    font-size: 1rem;
+                }
+            }
 
             & .highlight {
                 font-size: 1.2rem;
