--- a/src/css/experience.css
+++ b/src/css/experience.css
@@ -38,8 +38,10 @@
                     display: flex;
                     flex-direction: column;
                     gap: 1rem;
+                    justify-content: center;
                     min-width: 50%;
                     padding: 2rem;
+                    height: 65vh;
 
                     & .logos-container {
                         display: flex;
@@ -149,7 +151,6 @@
                 & .jobs-container {
                     & .job {
                         padding: 1rem;
-                        min-height: 80vh;
                     }
                 }
             }
