--- a/src/css/projects.css
+++ b/src/css/projects.css
@@ -90,6 +90,7 @@
                     display: flex;
                     flex-direction: row;
                     gap: 1rem;
+                    min-height: 27rem;
                     overflow-x: scroll;
                     scroll-behavior: smooth;
                     width: 45rem;
@@ -162,7 +163,6 @@
 @media only screen and (max-width: 768px) {
     #projects {
         & .projects-content {
-            flex-direction: column-reverse;
             & .project-container {
                 & .images {
                     display: none;
