fix height embedded page

--- a/src/css/experience.css
+++ b/src/css/experience.css
@@ -140,7 +140,6 @@
 @media only screen and (max-width: 768px) {
     #experience {
         gap: 0;
-
         & .subtitle {
             order: 1;
         }
@@ -150,6 +149,7 @@
                 flex-direction: column-reverse;
                 & .jobs-container {
                     & .job {
+                        justify-content: start;
                         padding: 1rem;
                     }
                 }
