--- a/src/css/global.css
+++ b/src/css/global.css
@@ -38,6 +38,7 @@
 
 @media only screen and (max-width: 768px) {
     #app {
+        padding-block: .5rem;
         padding-inline: .5rem;
         overflow: hidden;
     }
