--- a/src/css/menu.css
+++ b/src/css/menu.css
@@ -5,6 +5,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    height: 3rem;
     gap: 1rem;
     padding: 0.5rem 1rem;
 
@@ -13,7 +14,7 @@
         & img {
             height: 1.1rem;
             width: 1.1rem;
-            filter: drop-shadow(0rem 0rem .2rem white);
+            filter: drop-shadow(.1rem .1rem .01rem white);
         }
     }
 
@@ -35,8 +36,10 @@
 @media only screen and (max-width: 768px) {
     .menu {
         gap: .5rem;
-        justify-content: space-around;
-        padding: 0;
+        justify-content: space-between;
+        flex-direction: row-reverse;
+        padding-block: 0;
+        padding-inline: 1rem;
         width: 100%;
 
         & .menu-item {
@@ -113,11 +116,12 @@
         & .close-mobile-menu {
             align-items: center;
             font-size: 2rem;
+            font-weight: 300;
             padding: 0;
             position: absolute;
             right: 1.4rem;
             top: 1.4rem;
-            height: 1rem;
+            height: 2rem;
             display: flex;
             justify-content: center;
             width: 2rem;
