--- a/src/css/modeSwitch.css
+++ b/src/css/modeSwitch.css
@@ -2,7 +2,7 @@
     border-radius: 4rem;
     height: 1rem;
     padding: 0;
-    margin: 1rem;
+    margin: .5rem;
     outline: none;
     transition: all 300ms;
     will-change: filter;
@@ -15,5 +15,12 @@
     }
     &.dark-mode {
         filter: drop-shadow(0 0 0.5em white);
+    }
+}
+
+
+@media only screen and (max-width: 768px) {
+    #mode-switch {
+        margin: 0;
     }
 }
