--- a/src/css/menu.css
+++ b/src/css/menu.css
@@ -113,21 +113,36 @@
             text-align: left;
         }
 
-        & .close-mobile-menu {
+        & .burger-menu {
             align-items: center;
-            font-size: 2rem;
-            font-weight: 300;
             padding: 0;
             position: absolute;
-            right: 1.4rem;
-            top: 1.4rem;
+            right:0rem;
+            top: 1rem;
             height: 2rem;
             display: flex;
+            flex-direction: column;
             justify-content: center;
             width: 2rem;
-            line-height: 2rem;
-            border: none;
+
+            & span {
+                border: .1rem solid var(--text-color);
+                width: 100%;
+            }
+
+            & :nth-child(1) {
+                transform: rotate(45deg) translate(.1rem, .1rem);
+            }
+
+            & :nth-child(2) {
+                transform: rotate(-45deg);
+            }
+
+            & :nth-child(3) {
+                display: none;
+            }
         }
+
     }
 
     .hidden {
