--- a/src/css/menu.css
+++ b/src/css/menu.css
@@ -14,7 +14,7 @@
         & img {
             height: 1.1rem;
             width: 1.1rem;
-            filter: drop-shadow(.1rem .1rem .01rem white);
+            filter: drop-shadow(0.1rem 0.1rem 0.01rem white);
         }
     }
 
@@ -28,18 +28,18 @@
     }
 
     & .menu-item {
-        padding: .5rem;
+        padding: 0.5rem;
         transition: all 200ms;
     }
 }
 
 @media only screen and (max-width: 768px) {
     .menu {
-        gap: .5rem;
+        gap: 0.5rem;
         justify-content: space-between;
         flex-direction: row-reverse;
         padding-block: 0;
-        padding-inline: 1rem;
+        padding-inline: 2rem;
         width: 100%;
 
         & .menu-item {
@@ -58,14 +58,10 @@
             cursor: pointer;
 
             & span {
-                border-bottom: .2rem solid var(--text-color);
+                border-bottom: 0.2rem solid var(--text-color);
                 height: 100%;
                 width: 100%;
             }
-        }
-
-        & .burger-menu:focus {
-            outline: none;
         }
 
         & .logo {
@@ -115,23 +111,24 @@
 
         & .burger-menu {
             align-items: center;
-            padding: 0;
-            position: absolute;
-            right:0rem;
-            top: 1rem;
-            height: 2rem;
             display: flex;
             flex-direction: column;
             justify-content: center;
-            width: 2rem;
+            height: 1.5rem;
+            padding: 0;
+            position: absolute;
+            right: 1.3rem;
+            top: 1.3rem;
+            width: 1.5rem;
 
             & span {
-                border: .1rem solid var(--text-color);
+                border: 0.1rem solid var(--text-color);
+                filter: drop-shadow(0.1rem 0.1rem 0.5rem var(--text-color));
                 width: 100%;
             }
 
             & :nth-child(1) {
-                transform: rotate(45deg) translate(.1rem, .1rem);
+                transform: rotate(45deg) translate(0.1rem, 0.1rem);
             }
 
             & :nth-child(2) {
@@ -142,7 +139,6 @@
                 display: none;
             }
         }
-
     }
 
     .hidden {
