--- a/src/css/menu.css
+++ b/src/css/menu.css
@@ -123,7 +123,7 @@
 
             & span {
                 border: 0.1rem solid var(--text-color);
-                filter: drop-shadow(0.1rem 0.1rem 0.5rem var(--text-color));
+                filter: drop-shadow(0.1rem 0.1rem 0.5rem white);
                 width: 100%;
             }
 
