--- a/src/css/projects.css
+++ b/src/css/projects.css
@@ -34,6 +34,7 @@
             & ul {
                 display: flex;
                 flex-direction: row;
+                flex-wrap: wrap;
                 gap: 2rem;
                 padding: 0;
 
