--- a/src/css/menu.css
+++ b/src/css/menu.css
@@ -14,7 +14,8 @@
         & img {
             height: 1.1rem;
             width: 1.1rem;
-            filter: drop-shadow(0.1rem 0.1rem 0.01rem white);
+            filter: drop-shadow(0.1rem 0.1rem 0.01rem var(--light-color))
+                drop-shadow(0rem 0rem 0.5rem var(--light-color));
         }
     }
 
